--- a/common.gl.po
+++ b/common.gl.po
@@ -66,11 +66,11 @@ msgstr "Mensaxe xenérica"
 #: qcsrc/client/hud/panel/centerprint.qc:293
 #: qcsrc/client/hud/panel/centerprint.qc:303
 msgid "vs"
-msgstr "vs"
+msgstr "contra"
 
 #: qcsrc/client/hud/panel/chat.qc:168
 msgid "^3Player^7: This is the chat area."
-msgstr "^3Xogador^7: Esta é a área de chat."
+msgstr "^3Xogador^7: Esta é a área de leria."
 
 #: qcsrc/client/hud/panel/engineinfo.qc:75
 #, c-format
@@ -99,12 +99,12 @@ msgstr "disparo primario"
 #: qcsrc/client/hud/panel/infomessages.qc:109
 #, c-format
 msgid "^1Press ^3%s^1 or ^3%s^1 for next or previous player"
-msgstr "^1Pulsa ^3%s^1 ou ^3%s^1 para ver o xogador seguinte ou anterior"
+msgstr "^1Preme ^3%s^1 ou ^3%s^1 para ollar o xogador seguinte ou anterior"
 
 #: qcsrc/client/hud/panel/infomessages.qc:109
 #: qcsrc/client/hud/panel/infomessages.qc:113
 msgid "next weapon"
-msgstr "arma seguinte"
+msgstr "seguinte arma "
 
 #: qcsrc/client/hud/panel/infomessages.qc:109
 #: qcsrc/client/hud/panel/infomessages.qc:113
@@ -119,7 +119,7 @@ msgstr "^1Usa ^3%s^1 ou ^3%s^1 para trocar a velocidade"
 #: qcsrc/client/hud/panel/infomessages.qc:115
 #, c-format
 msgid "^1Press ^3%s^1 to observe, ^3%s^1 to change camera mode"
-msgstr "^1Pulsa ^3%s^1 para observar ou ^3%s^1 para trocar o modo de cámara"
+msgstr "^1Preme ^3%s^1 para observar ou ^3%s^1 para trocar o modo de cámara"
 
 #: qcsrc/client/hud/panel/infomessages.qc:115
 #: qcsrc/client/hud/panel/infomessages.qc:117
@@ -177,7 +177,7 @@ msgstr "^2Actualmente na fase de ^1quecemento^2!"
 
 #: qcsrc/client/hud/panel/infomessages.qc:172
 msgid "^31^2 more player is needed for the match to start."
-msgstr "^31^2 necesítase máis xogador para que comece a partida."
+msgstr "^31^2 xogador máis é preciso para que comece a partida."
 
 #: qcsrc/client/hud/panel/infomessages.qc:174
 #, c-format
@@ -187,7 +187,7 @@ msgstr "^3%d^2 precisanse máis xogadores para que comece a partida."
 #: qcsrc/client/hud/panel/infomessages.qc:187
 #, c-format
 msgid "%sPress ^3%s%s to end warmup"
-msgstr "%sPulsa  ^3%s%s para terminar o quecemento"
+msgstr "%sPreme  ^3%s%s para rematar o quecemento"
 
 #: qcsrc/client/hud/panel/infomessages.qc:187
 #: qcsrc/client/hud/panel/infomessages.qc:192
@@ -224,7 +224,7 @@ msgstr "^1Ollando a este xogador:"
 
 #: qcsrc/client/hud/panel/infomessages.qc:220
 msgid "^1Spectating you:"
-msgstr "^1Ollando a ti:"
+msgstr "^1Ollandote:"
 
 #: qcsrc/client/hud/panel/infomessages.qc:267
 msgid "^7Press ^3ESC ^7to show HUD options."
@@ -250,7 +250,7 @@ msgstr "Xogador %d"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:220
 msgid "Standard quick menu"
-msgstr "Menú rápido standard"
+msgstr "Menú rápido estándar"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:660
 #: qcsrc/client/hud/panel/quickmenu.qc:662
@@ -265,12 +265,12 @@ msgstr "Comando%d"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:693
 msgid "Continue..."
-msgstr "Continúa..."
+msgstr "Continuar..."
 
 #: qcsrc/client/hud/panel/quickmenu.qc:844
 #: qcsrc/client/hud/panel/quickmenu.qc:851
 msgid "Chat"
-msgstr "Chat"
+msgstr "Leria"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:845
 msgid "QMCMD^Send public message to"
@@ -303,7 +303,7 @@ msgstr "QMCMD^Enviar en Inglés"
 #: qcsrc/client/hud/panel/quickmenu.qc:855
 #: qcsrc/client/hud/panel/quickmenu.qc:871
 msgid "QMCMD^Team chat"
-msgstr "QMCMD^Chat do equipo"
+msgstr "QMCMD^Leria do equipo"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:856
 msgid "QMCMD^strength soon"
@@ -463,7 +463,7 @@ msgstr "QMCMD^Son dos golpes"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:888
 msgid "QMCMD^Chat sound"
-msgstr "QMCMD^Son do chat"
+msgstr "QMCMD^Son da leria"
 
 #: qcsrc/client/hud/panel/quickmenu.qc:893
 msgid "QMCMD^Change spectator camera"
@@ -864,19 +864,19 @@ msgstr "SCO^renacementos"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:165
 msgid "Number of rounds won"
-msgstr "Numero de rondas gañadas"
+msgstr "Numero de roldas gañadas"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:165
 msgid "SCO^rounds won"
-msgstr "SCO^rondas gañadas"
+msgstr "SCO^roldas gañadas"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:166
 msgid "Number of rounds played"
-msgstr "Numero de rondas xogadas"
+msgstr "Numero de roldas xogadas"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:166
 msgid "SCO^rounds played"
-msgstr "SCO^rondas xogadas"
+msgstr "SCO^roldas xogadas"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:167
 msgid "SCO^score"
@@ -2519,25 +2519,25 @@ msgstr "^1Novas do servidor:"
 
 #: qcsrc/common/notifications/all.inc:234
 msgid "^F4NOTE: ^BGChat is currently disabled on this server"
-msgstr "^F4NOTA: ^BGO chat está desactivado neste servidor"
+msgstr "^F4NOTA: ^BGA leria está desactivada neste servidor"
 
 #: qcsrc/common/notifications/all.inc:235
 msgid "^F4NOTE: ^BGSpectator chat is not sent to players during the match"
 msgstr ""
-"^F4NOTA: ^BGO chat de espectadores non se envía aos xogadores durante a "
+"^F4NOTA: ^BGA leria de espectadores non se envía aos xogadores durante a "
 "partida"
 
 #: qcsrc/common/notifications/all.inc:236
 msgid "^F4NOTE: ^BGPrivate chat is currently disabled on this server"
-msgstr "^F4NOTA: ^BGO chat privado está desactivado neste servidor"
+msgstr "^F4NOTA: ^BGA leria privada está desactivada neste servidor"
 
 #: qcsrc/common/notifications/all.inc:237
 msgid "^F4NOTE: ^BGSpectator chat is currently disabled on this server"
-msgstr "^F4NOTA: ^BGO chat de espectadores está desactivado neste servidor"
+msgstr "^F4NOTA: ^BGA leria de espectadores está desactivada neste servidor"
 
 #: qcsrc/common/notifications/all.inc:238
 msgid "^F4NOTE: ^BGTeam chat is currently disabled on this server"
-msgstr "^F4NOTA: ^BGO chat do equipo está desactivado neste servidor"
+msgstr "^F4NOTA: ^BGA leria do equipo está desactivada neste servidor"
 
 #: qcsrc/common/notifications/all.inc:240
 #, c-format
@@ -2817,12 +2817,12 @@ msgstr "^BG%s%s^K1 morreu nun accidente con ^BG%s^K1%s%s"
 msgid ""
 "^BG%s%s^K1 got caught in the blast when ^BG%s^K1's Bumblebee exploded%s%s"
 msgstr ""
-"^BG%s%s^K1 quedou atrapado na explosión cando ^BG%s^K1 Bumblebee explotou%s%s"
+"^BG%s%s^K1 quedou atrapado na explosión cando ^BG%s^K1 Abellón estoupou%s%s"
 
 #: qcsrc/common/notifications/all.inc:295
 #, c-format
 msgid "^BG%s%s^K1 saw the pretty lights of ^BG%s^K1's Bumblebee gun%s%s"
-msgstr "^BG%s%s^K1 viu as fermosas luces da ^BG%s^K1 Arma Bumblebee%s%s"
+msgstr "^BG%s%s^K1 viu as fermosas luces da ^BG%s^K1 Arma Abellón%s%s"
 
 #: qcsrc/common/notifications/all.inc:296
 #, c-format
@@ -2832,7 +2832,8 @@ msgstr "^BG%s%s^K1 foi esmagado por ^BG%s^K1%s%s"
 #: qcsrc/common/notifications/all.inc:297
 #, c-format
 msgid "^BG%s%s^K1 was cluster bombed by ^BG%s^K1's Raptor%s%s"
-msgstr "^BG%s%s^K1 foi bombardeado polo acio de ^BG%s^K1 Raptor de%s%s"
+msgstr ""
+"^BG%s%s^K1 foi bombardeado con bombas de acio de ^BG%s^K1 Rapineiro %s%s"
 
 #: qcsrc/common/notifications/all.inc:298
 #, c-format
@@ -2843,7 +2844,7 @@ msgstr "^BG%s%s^K1 non puido resistir ^BG%s^K1 as manchas moradas%s%s"
 #, c-format
 msgid "^BG%s%s^K1 got caught in the blast when ^BG%s^K1's Raptor exploded%s%s"
 msgstr ""
-"^BG%s%s^K1 quedou atrapado na explosión cando ^BG%s^K1 Raptor estoupou%s%s"
+"^BG%s%s^K1 quedou atrapado na explosión cando ^BG%s^K1 Rapineiro estoupou%s%s"
 
 #: qcsrc/common/notifications/all.inc:300
 #, c-format
@@ -2867,17 +2868,17 @@ msgstr "^BG%s%s^K1 foi destruído en anacos por ^BG%s^K1 Robot araña%s%s"
 #, c-format
 msgid "^BG%s%s^K1 got caught in the blast when ^BG%s^K1's Racer exploded%s%s"
 msgstr ""
-"^BG%s%s^K1 quedou atrapado na explosión cando ^BG%s^K1 Racer explotou%s%s"
+"^BG%s%s^K1 quedou atrapado na explosión cando ^BG%s^K1 Bólido estoupou%s%s"
 
 #: qcsrc/common/notifications/all.inc:304
 #, c-format
 msgid "^BG%s%s^K1 was bolted down by ^BG%s^K1's Racer%s%s"
-msgstr "^BG%s%s^K1 foi atornillado por ^BG%s^K1 Racer%s%s"
+msgstr "^BG%s%s^K1 foi cravado por ^BG%s^K1 Bólido%s%s"
 
 #: qcsrc/common/notifications/all.inc:305
 #, c-format
 msgid "^BG%s%s^K1 couldn't find shelter from ^BG%s^K1's Racer%s%s"
-msgstr "^BG%s%s^K1 non puido atopar o refuxio ^BG%s^K1 do corredor%s%s"
+msgstr "^BG%s%s^K1 non puido atopar o refuxio ^BG%s^K1 do Bólido%s%s"
 
 #: qcsrc/common/notifications/all.inc:306
 #, c-format
@@ -3135,7 +3136,7 @@ msgstr "^BG%s^K1 foi destruído por unha torre Walker%s%s"
 #: qcsrc/common/notifications/all.inc:353
 #, c-format
 msgid "^BG%s^K1 got caught in the blast of a Bumblebee explosion%s%s"
-msgstr "^BG%s^K1 foi alcanzado na explosión dun Bumblebee%s%s"
+msgstr "^BG%s^K1 foi alcanzado na explosión dun Abellón%s%s"
 
 #: qcsrc/common/notifications/all.inc:354
 #, c-format
@@ -3145,12 +3146,12 @@ msgstr "^BG%s^K1 foi esmagado por un vehículo%s%s"
 #: qcsrc/common/notifications/all.inc:355
 #, c-format
 msgid "^BG%s^K1 was caught in a Raptor cluster bomb%s%s"
-msgstr "^BG%s^K1 foi alcanzado por unha bomba de racimo Raptor%s%s"
+msgstr "^BG%s^K1 Foi atrapado nunha bomba de acio do Rapineiro%s%s"
 
 #: qcsrc/common/notifications/all.inc:356
 #, c-format
 msgid "^BG%s^K1 got caught in the blast of a Raptor explosion%s%s"
-msgstr "^BG%s^K1 quedou atrapado na explosión dun Raptor%s%s"
+msgstr "^BG%s^K1 quedou atrapado na explosión dun Rapineiro%s%s"
 
 #: qcsrc/common/notifications/all.inc:357
 #, c-format
@@ -3165,12 +3166,12 @@ msgstr "^BG%s^K1 foi destrozado por un foguete Robot araña%s%s"
 #: qcsrc/common/notifications/all.inc:359
 #, c-format
 msgid "^BG%s^K1 got caught in the blast of a Racer explosion%s%s"
-msgstr "^BG%s^K1 quedou atrapado na explosión dun Racer%s%s"
+msgstr "^BG%s^K1 quedou atrapado na explosión dun Bólido%s%s"
 
 #: qcsrc/common/notifications/all.inc:360
 #, c-format
 msgid "^BG%s^K1 couldn't find shelter from a Racer rocket%s%s"
-msgstr "^BG%s^K1 non puido atopar refuxio dun foguete Racer%s%s"
+msgstr "^BG%s^K1 non puido atopar refuxio dun foguete do Bólido%s%s"
 
 #: qcsrc/common/notifications/all.inc:361
 #, c-format
@@ -3231,7 +3232,7 @@ msgstr "^BG%s^BG gaña a rolda"
 #: qcsrc/common/notifications/all.inc:377
 #: qcsrc/common/notifications/all.inc:565
 msgid "^BGRound tied"
-msgstr "^BGRoulda empatada"
+msgstr "^BGRolda empatada"
 
 #: qcsrc/common/notifications/all.inc:378
 #: qcsrc/common/notifications/all.inc:566
@@ -4410,7 +4411,7 @@ msgstr "^K1Fuches eliminado por unha torreta Walker!"
 
 #: qcsrc/common/notifications/all.inc:676
 msgid "^K1You got caught in the blast of a Bumblebee explosion!"
-msgstr "^K1Quedaches atrapado na explosión dunha explosión de Bumblebee!"
+msgstr "^K1Apañouche a onda da explosión dun Abeillón!"
 
 #: qcsrc/common/notifications/all.inc:677
 msgid "^K1You were crushed by a vehicle!"
@@ -4418,11 +4419,11 @@ msgstr "^K1Fuches esmagado por un vehículo!"
 
 #: qcsrc/common/notifications/all.inc:678
 msgid "^K1You were caught in a Raptor cluster bomb!"
-msgstr "^K1Fuches atrapado nunha bomba de acio Raptor!"
+msgstr "^K1Fuches atrapado nunha bomba de acio do Rapineiro!"
 
 #: qcsrc/common/notifications/all.inc:679
 msgid "^K1You got caught in the blast of a Raptor explosion!"
-msgstr "^K1Quedaches atrapado na explosión dun Raptor!"
+msgstr "^K1Quedaches atrapado na explosión dun Rapineiro!"
 
 #: qcsrc/common/notifications/all.inc:680
 msgid "^K1You got caught in the blast of a Spiderbot explosion!"
@@ -4434,11 +4435,11 @@ msgstr "^K1Un foguete Robot Araña destrozoute!"
 
 #: qcsrc/common/notifications/all.inc:682
 msgid "^K1You got caught in the blast of a Racer explosion!"
-msgstr "^K1Quedaches atrapado na explosión dunha Racer!"
+msgstr "^K1Quedaches atrapado na explosión dun Bólido!"
 
 #: qcsrc/common/notifications/all.inc:683
 msgid "^K1You couldn't find shelter from a Racer rocket!"
-msgstr "^K1Non puideches atopar refuxio dun foguete Racer!"
+msgstr "^K1Non puideches atopar refuxio dun foguete do Bólido!"
 
 #: qcsrc/common/notifications/all.inc:684
 msgid "^K1Watch your step!"
@@ -5860,31 +5861,31 @@ msgstr "Non hai un artillero esquerdo!"
 
 #: qcsrc/common/vehicles/vehicle/bumblebee.qh:21
 msgid "Bumblebee"
-msgstr "Bumblebee"
+msgstr "Abellón"
 
 #: qcsrc/common/vehicles/vehicle/racer.qh:21
 msgid "Racer"
-msgstr "Racer"
+msgstr "Bólido"
 
 #: qcsrc/common/vehicles/vehicle/racer_weapon.qh:9
 msgid "Racer cannon"
-msgstr "Canón Racer"
+msgstr "Bólido con canón"
 
 #: qcsrc/common/vehicles/vehicle/raptor.qh:21
 msgid "Raptor"
-msgstr "Raptor"
+msgstr "Rapineiro"
 
 #: qcsrc/common/vehicles/vehicle/raptor_weapons.qh:9
 msgid "Raptor cannon"
-msgstr "Canón Raptor"
+msgstr "Rapineiro de canón"
 
 #: qcsrc/common/vehicles/vehicle/raptor_weapons.qh:17
 msgid "Raptor bomb"
-msgstr "Bomba Raptor"
+msgstr "Rapineiro Bomba"
 
 #: qcsrc/common/vehicles/vehicle/raptor_weapons.qh:25
 msgid "Raptor flare"
-msgstr "bengala raptor"
+msgstr "Rapineiro de Laparada"
 
 #: qcsrc/common/vehicles/vehicle/spiderbot.qh:21
 msgid "Spiderbot"
@@ -6679,19 +6680,19 @@ msgstr "Panel de impresión central"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_chat.qc:17
 msgid "Chat size:"
-msgstr "Tamaño do chat:"
+msgstr "Tamaño da leria:"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_chat.qc:20
 msgid "Chat lifetime:"
-msgstr "Duración do chat:"
+msgstr "Duración da leria:"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_chat.qc:23
 msgid "Chat beep sound"
-msgstr "Pitido do chat"
+msgstr "Sinal sonoro da leria"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_chat.qh:6
 msgid "Chat Panel"
-msgstr "Panel do chat"
+msgstr "Panel da leria"
 
 #: qcsrc/menu/xonotic/dialog_hudpanel_engineinfo.qc:17
 msgid "FPS:"
@@ -8341,7 +8342,7 @@ msgstr "* é o obxecto ao que te enfrontas"
 
 #: qcsrc/menu/xonotic/dialog_sandboxtools.qh:6
 msgid "Sandbox Tools"
-msgstr "Ferramentas Sandbox"
+msgstr "Ferramentas de área de proba"
 
 #: qcsrc/menu/xonotic/dialog_settings.qc:18
 msgid "Video"
@@ -8550,7 +8551,7 @@ msgstr "Aumentar"
 
 #: qcsrc/menu/xonotic/dialog_settings_audio.qc:159
 msgid "Chat message sound"
-msgstr "Son da mensaxe de chat"
+msgstr "Son da mensaxe da leria"
 
 #: qcsrc/menu/xonotic/dialog_settings_audio.qc:161
 msgid "Menu sounds"
@@ -8912,7 +8913,7 @@ msgstr "Brillo da coroa:"
 
 #: qcsrc/menu/xonotic/dialog_settings_effects.qc:211
 msgid "Flare effects around certain lights"
-msgstr "Efectos de flare arredor de certas luces"
+msgstr "Efectos de brillo arredor de certas luces"
 
 #: qcsrc/menu/xonotic/dialog_settings_effects.qc:214
 msgid "Fade coronas according to visibility"
@@ -9279,11 +9280,11 @@ msgstr "Mostra as mensaxes da consola na esquina superior esquerda"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:80
 msgid "Display all info messages in the chatbox"
-msgstr "Mostra todas as mensaxes de información na caixa de chat"
+msgstr "Amosa todas as mensaxes de información na caixa de leria"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:82
 msgid "Display player statuses in the chatbox"
-msgstr "Mostra o estado dos xogadores no chatbox"
+msgstr "Amosa o estado dos xogadores na caixa de leria"
 
 #: qcsrc/menu/xonotic/dialog_settings_game_messages.qc:86
 msgid "Powerup notifications"
@@ -10407,15 +10408,15 @@ msgstr "Comunicación"
 
 #: qcsrc/menu/xonotic/keybinder.qc:146
 msgid "public chat"
-msgstr "chat público"
+msgstr "Leria pública"
 
 #: qcsrc/menu/xonotic/keybinder.qc:147
 msgid "team chat"
-msgstr "chat en equipo"
+msgstr "leria do equipo"
 
 #: qcsrc/menu/xonotic/keybinder.qc:148
 msgid "show chat history"
-msgstr "mostrar o historial de chat"
+msgstr "amosar o historial da leria"
 
 #: qcsrc/menu/xonotic/keybinder.qc:149
 msgid "vote YES"
@@ -10467,11 +10468,11 @@ msgstr "Desenvolvemento"
 
 #: qcsrc/menu/xonotic/keybinder.qc:186
 msgid "sandbox menu"
-msgstr "menú sandbox"
+msgstr "menú área de proba"
 
 #: qcsrc/menu/xonotic/keybinder.qc:187
 msgid "drag object (sandbox)"
-msgstr "arrastrar obxecto (sandbox)"
+msgstr "arrastrar obxecto (área de proba)"
 
 #: qcsrc/menu/xonotic/keybinder.qc:188
 msgid "waypoint editor menu"
